# homeGallery

./: .gitignore  .graphify_detect.json  .graphify_python  AGENTS.md  BUGS.md  LESSONS.md  MEMORY.md  PLAN.md  README.md  capture-remaining.js  capture-screenshots.js  debug_phash.py  debug_test.py  manage.py  nginx.conf  opencode.json  package-lock.json  playwright.config.js  regenerate-setup-html.py  run.py  setup.py  start-server.ps1  start.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  config_loader.py  database.py  dependencies.py  logging_config.py  main.py
backend/app/agents/: __init__.py  analysis_agent.py  base.py  enhancement_agent.py  metadata_agent.py  orchestrator.py  organization_agent.py  search_agent.py
backend/app/api/: __init__.py  agents.py  albums.py  analysis.py  api_keys.py  auth.py  contact.py  duplicates.py  enhancement.py  faces.py  management.py  metadata.py  metrics.py  notifications.py  photos.py  queue.py  search.py  settings_api.py  setup.py  visual_search.py
backend/app/mcp/: agent_server.py  image_server.py
backend/app/models/: __init__.py  album.py  api_key.py  contact.py  face.py  photo.py  photo_metadata.py  task_queue.py  telegram_config.py  user.py
backend/app/schemas/: __init__.py  album.py  api_key.py  contact.py  enhancement.py  face.py  notifications.py  photo.py  setup.py  user.py
backend/app/services/: __init__.py  album_service.py  face_service.py  image_processor.py  notification_hub.py  telegram_service.py  thumbnail_service.py
backend/app/utils/: encryption.py  exif.py  (+1 more)
(+137 files in other folders)
